
- RegisterViewer: set initial focus to registerList, added key bindings for
  inserting content, clearing a register and leaving the registerList
  (#3437779 Martin Raspe)

- RegisterViewer: close the floating window after inserting a clip, to make
  behaviour consistent with Paste Previous window (#3478916 Jarek Czekalski)

}}}
{{{ Miscellaneous

- New FileOpenerService, Offered by FastOpen 2.5, used by ErrorList 2.0
  (#3481157 Alan Ezust)

- Macros folder can now be localized with properties
  macros.folder.[foldername].label (Matthieu Casanova)

- Pasting a VFSFile as String dataflavor will now paste the full path instead of
  the name of the file (Matthieu Casanova)

- The EditingOptionPane has now an option to remember the user choice about
  large file treatment (Matthieu Casanova)

- OS/2 tasks were removed from the Java installer as OS/2 does not
  have a working Java 6 implementation and probably never will have
  (Björn "Vampire" Kautler)

- jEdit support for keymaps (Matthieu Casanova)

- User Settings directory migrated to %APPDATA%/jEdit on Windows
  (#2510763 Alan Ezust)

- Added support for "Find Previous" when searching in multiple files
  (Evan Wright)

- Applied patch to Get_Class_Name macro from lxdyglt to find
  classname for inner classes. (#3301598 Dale Anson)

- Fixed some edge cases in the Make_Get_and_Set_Methods macro, properly handle
  comments, multi-line variable declarations and multiple initializers.
  (Dale Anson)

- Soft wrap now works at non-whitespace line breaks within some natural
  language texts; Japanese for example.
  (patch #2483695 Kazutoshi Satoda)

- Introduced glyph caching to lower CPU usage on text rendering and
  line wrapping. (Kazutoshi Satoda)

- Updated Move Lines Up and Down macros to move whole lines regardless of
  selection. (Dale Anson)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2